--- a/src/features/demo/ComponentsDemo.module.css
+++ b/src/features/demo/ComponentsDemo.module.css
@@ -1,12 +1,34 @@
 .section {
-    display: flex;
+    display: flex; 
     flex-direction: column;
-    width: 350px;
-    padding: 20px;
-    gap: 10px;
+    align-items: center;
+    margin-top: 40px;
+    margin-bottom: 20px;
 }
 
-.box {
-    display: flex;
+.section h2 {
+    margin-bottom: 22px;
+}
+
+
+.buttonsCol {
+    display: inline-flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 10px;
+}
+.buttonsCol:nth-child(2) {
+    margin-left: 30px;
+}
+
+.buttonsRow {
+    display: inline-flex;
     justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+    margin-top: 22px;
+}
+
+.superCheckboxExample {
+    margin-bottom: 20px;
 }
