--- a/src/index.css
+++ b/src/index.css
@@ -1,40 +1,42 @@
 body {
-	margin: 0;
-	padding: 0;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
-		"Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
-		"Helvetica Neue", sans-serif;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    padding: 0;
+	background: rgb(154,146,199);
+	background: radial-gradient(circle, rgba(154,146,199,1) 0%, rgba(193,179,210,1) 35%, rgba(225,207,220,1) 100%);
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+    "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+    "Helvetica Neue", sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-		monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
 }
 
 html {
-	box-sizing: border-box;
-	scroll-behavior: smooth;
+    box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 *,
 *::before,
 *::after {
-	box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 a {
-	text-decoration: none;
-	color: inherit;
-	cursor: pointer;
+    text-decoration: none;
+    color: inherit;
+    cursor: pointer;
 }
 
 ul,
 li {
-	list-style: none;
-	margin: 0;
-	padding: 0;
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
 h1,
@@ -43,20 +45,20 @@ h3,
 h4,
 h5,
 h6 {
-	margin: 0;
-	font-size: inherit;
+    margin: 0;
+    font-size: inherit;
 }
 
 p {
-	margin: 0;
+    margin: 0;
 }
 
 button,
 input,
 textarea {
-	border: none;
-	outline: none;
-	font-family: "Open Sans", sans-serif;
+    border: none;
+    outline: none;
+    font-family: "Open Sans", sans-serif;
 }
 
 
@@ -64,13 +66,13 @@ button:focus-visible,
 input:focus-visible,
 textarea:focus-visible,
 a:focus-visible {
-	outline: 2px solid #999;
-	/* outline: 2px solid rgba(255, 255, 255, 0.6); */
-	/* border-radius: 4px; */
+    outline: 2px solid #999;
+    /* outline: 2px solid rgba(255, 255, 255, 0.6); */
+    /* border-radius: 4px; */
 }
 
 
 input:-webkit-autofill,
 input:-webkit-autofill:focus {
-	transition: background-color 600000s 0s, color 600000s 0s;
+    transition: background-color 600000s 0s, color 600000s 0s;
 }
