--- a/src/features/auth/AuthBlock.module.css
+++ b/src/features/auth/AuthBlock.module.css
@@ -3,7 +3,7 @@
     background-color: #F9F9FE;
     max-width: 413px;
     min-height: 500px;
-    margin: 100px auto 0;
+    margin: 60px auto 0;
     border-radius: 8px;
     padding: 35px;
     display: flex;
@@ -15,6 +15,7 @@
 }
 
 .mainLogo {
+    margin-bottom: 25px;
     font-size: 25px;
     color: #6b15b7;
     font-weight: bold;
@@ -24,7 +25,7 @@
 
 .pageTitle {
     font-size: 20px;
-    margin: 5px;
+    margin-bottom: 15px;
 }
 
 
@@ -33,12 +34,15 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
+    margin-top: 60px;
 }
 
 .navBlockLabel {
-    margin: 5px;
+    margin-bottom: 15px;
+    opacity: .5;
 }
 
 .navBlockLink {
+    font-weight: 600;
     color: blueviolet;
 }
