--- a/src/main/ui/common/SuperInputText/SuperInputText.module.css
+++ b/src/main/ui/common/SuperInputText/SuperInputText.module.css
@@ -1,12 +1,14 @@
 .wrapper {
     position: relative;
+    width: 100%;
     /* space for error message */
     padding-bottom: 24px;
 }
 
 .superInput {
     display: block;
-    width: 280px;
+    /* width: 280px; */
+    width: 100%;
     height: 46px;
     padding: 0 10px;
     font-size: 18px;
