--- a/src/main/ui/App.css
+++ b/src/main/ui/App.css
@@ -1,7 +1,10 @@
-.App {
-  
+.app {
+    min-height: 101vh;
 }
-.loader{
+.app__content {
+    padding-top: 40px;
+}
+.app__loader{
     width: 50px;
     height: 50px;
     margin: 0 auto;
