PacksTable CardsTable components, func and styles. Some other fixes

--- a/src/features/cards/PacksList/PacksList.module.css
+++ b/src/features/cards/PacksList/PacksList.module.css
@@ -15,6 +15,12 @@
 .wrapper{
     display: flex;
 }
+
+.packListHeader {
+    display: flex;
+    justify-content: space-between;
+}
+
 .btn{
     display: flex;
     margin-bottom: 50px;
