--- a/src/features/cards/PacksList/PacksFilters/PacksFilters.module.css
+++ b/src/features/cards/PacksList/PacksFilters/PacksFilters.module.css
@@ -1,10 +1,23 @@
+.filtersHeader {
+    position: relative;
+    width: 100%;
+    margin-bottom: 35px;
+}
+
+.blockTitle {
+    top: 0;
+    left: 0;
+    font-size: 20px;
+}
+
 .packBlock {
+    position: relative;
     font-family: 'Montserrat', sans-serif;
     background-color: #F9F9FE;
     max-width: 380px;
     min-height: 500px;
     border-radius: 8px;
-    padding: 30px;
+    padding: 20px 30px;
     display: flex;
     flex-direction: column;
     align-items: center;
